--- a/DemiseTheReversation.csproj
+++ b/DemiseTheReversation.csproj
@@ -11,12 +11,21 @@
       <Compile Update="src\MainForm.cs">
         <SubType>Form</SubType>
       </Compile>
+      <Compile Remove="AutoForm\**" />
     </ItemGroup>
 
     <ItemGroup>
       <Reference Include="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
         <HintPath>..\..\..\..\Windows\Microsoft.NET\assembly\GAC_MSIL\System.Windows.Forms\v4.0_4.0.0.0__b77a5c561934e089\System.Windows.Forms.dll</HintPath>
       </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="AutoForm\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="AutoForm\**" />
     </ItemGroup>
 
 </Project>
